--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="../images/my_company_logo.png" />
+    <img src="https://i.imgur.com/H1qsYEl.png" />
+    <img
+  src="https://i.imgur.com/H1qsYEl.png"
+  alt="comedic crow gets wholesome support"
+/>
+<img src="https://i.imgur.com/H1qsYEl.png" alt="meh">
+<img src="https://i.imgur.com/H1qsYEl.png" alt="Meow">
+
   </body>
 </html>
