--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
   </head>
   <body>
     <!-- Your code here -->
-    <img src="../images/my_company_logo.png" />
-    <img src="https://i.imgur.com/H1qsYEl.png" />
+    <img src="../images/my_company_logo.png"/>
+    <img src="../images/my_company_logo.png" alt="logo"/>
+    <img src="https://i.imgur.com/H1qsYEl.png" alt="2nd pic" title="2nd title"/>
     <img
   src="https://i.imgur.com/H1qsYEl.png"
-  alt="comedic crow gets wholesome support"
-/>
-<img src="https://i.imgur.com/H1qsYEl.png" alt="meh">
-<img src="https://i.imgur.com/H1qsYEl.png" alt="Meow">
+  alt="comedic crow gets wholesome support"/>
 
   </body>
 </html>
